# redox-loader

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  env.sh  x86_64-pamb_os.json  x86_64-unknown-none-gnu.json
bootloader/: LICENSE
bootloader/x86_64/: bootsector.asm  disk.asm  kernel_copy.asm  real.asm  startup-common.asm
kernel/: boot.asm  grub.cfg  linker.ld  long_mode_init.asm  multiboot_header.asm
rfcs/: 0001-bootloader.md  rfc-template.md
src/: .lib.rs.swp  consts.rs  debug.rs  lib.rs  macros.rs  panic.rs  serial.rs  vga_buffer.rs
src/arch/: mod.rs
src/arch/x86_64/: gdt.rs  start.rs
src/arch/x86_64/interrupt/: exception.rs  ipi.rs  irq.rs  syscall.rs
src/devices/: uart_16550.rs
src/fs/: disk.rs  mbr.rs  mod.rs
src/fs/fat32/: .mod.rs.swp  mod.rs
src/fs/redoxfs/: disk.rs  filesystem.rs  mod.rs
src/graphical_debug/: display.rs  mod.rs
src/io/: dma.rs  mod.rs
src/loader/: mod.rs
src/memory/: mod.rs
src/partition/: mod.rs
