[package]
name = "pamb_os"
version = "0.1.0"
authors = ["Deepak Sirone", "Arpan Kapoor"]

[lib]
crate-type = ["staticlib"]
 
[dependencies]
rlibc = "1.0.0"
spin = "0.4"
bitflags = "1"
linked_list_allocator = "0.6"
slab_allocator = { path = "slab_allocator" , optional = true}
raw-cpuid = "3.0"
redox_syscall = { path = "syscall"}

[profile.dev]
panic = "abort"

[dependencies.x86]
version = "0.7"
default-features = false

[features]
default = []
graphical_debug = []
slab = ["slab_allocator"]
