[package]
name = "redox-loader"
version = "0.1.0"
authors = ["Deepak Sirone"]

[lib]
crate-type = ["staticlib"]
 
[dependencies]
rlibc = "1.0.0"
spin = "0.4.8"
bitflags = "1.0.3"
linked_list_allocator = "0.6.2" 
slab_allocator = { path = "slab_allocator" , optional = true}
raw-cpuid = "4.0.0"
redox_syscall = { path = "syscall"}
byteorder = { version = "1", default-features = false }
fat = { git = "https://gitlab.com/susurrus/fat-rs", rev = "fb831ff819580cacef495ad8397717f0d9dc5ab8" }

[profile.dev]
panic = "abort"

[dependencies.x86]
version = "0.7"
default-features = false

[dependencies.goblin]
version = "0.0.10"
default-features = false
features = ["elf32", "elf64"]

[features]
default = []
slab = ["slab_allocator"]
